--- a/index.html
+++ b/index.html
@@ -1,22 +1,77 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="nl">
-	
-<head>
-	<meta charset="UTF-8">
-	<meta name="author" content="jouw naam">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	
-	<title>Howdy FED2526</title>
-
-	<link href="styles/style.css" rel="stylesheet">
-
-	<link rel="icon" type="image/svg+xml" href="images/favicon.svg">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Basic-Fit - Live Groepslessen en Video-Workouts</title>
+    <link rel="stylesheet" href="/style.css" />
+    <meta property="og:image" content="https://bolt.new/static/og_default.png">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:image" content="https://bolt.new/static/og_default.png">
 </head>
+  <body>
+    <header>
+      <nav>
+        <ul>
+          <li><a href="#"><img src="images/icon-club-tt.svg" alt="" /> 1600+ Clubs</a></li>
+          <li><a href="#"><img src="images/icon-clock-24-tt.svg" alt="" /> Sport 24/7</a></li>
+          <li><a href="#"><img src="images/icon-kettlebell-tt.svg" alt="" /> Beste Apparatuur</a></li>
+          <li><a href="#"><img src="images/icon-clubs-tt.svg" alt="" /> Toegang tot alle Clubs</a></li>
+        </ul>
+        <ul>
+          <li><a href="#"><img src="" alt="" /> My Basic-Fit</a></li>
+          <li><a href="#"><img src="" alt="" /> Klantenservice</a></li>
+          <li>
+            <select>
+              <option>NL</option>
+              <option>EN</option>
+              <option>FR</option>
+            </select>
+          </li>
+        </ul>
+      </nav>
 
-<body>
-	<h1>Howdy FED2526</h1>
+      <nav>
+        <a href="#"><image src="images/logo-bf-orange.svg"></image></a>
+        <ul>
+          <li><a href="#">Vind een club</a></li>
+          <li><a href="#">Prijzen</a></li>
+          <li><a href="#">Club & faciliteiten ▾</a></li>
+          <li><a href="#">Groepslessen</a></li>
+          <li><a href="#">Training & advies ▾</a></li>
+        </ul>
+        <a href="#"><button>LID WORDEN</button></a>
+      </nav>
+    </header>
 
-	<script defer src="scripts/script.js"></script>
-</body>
-	
+    <main>
+      <section>
+        <article>
+          <a href="#">‹ Home</a>
+          <h1>LIVE GROEPSLESSEN EN VIDEO-WORKOUTS</h1>
+          <p>Train op jouw manier met live en virtuele lessen. Doe mee in de club of stream workouts via de app. Van dans tot high intensity, er is altijd iets dat bij je past. Altijd inbegrepen bij je lidmaatschap.</p>
+          <button>WORD LID</button>
+        </article>
+        <figure>
+          <img src="images/Landscape-Bootcamp NL.jpg" alt="Mensen doen yoga oefeningen in de sportschool" />
+        </figure>
+      </section>
+
+      <section>
+
+          <h2><span>ONTDEK ONZE</span> LESSEN</h2>
+          <p>Ga voluit in een energieke sessie, ontspan met yoga of kies iets ertussenin. Doe live mee in de club of stream on demand. Elke week nieuwe workouts.</p>
+
+
+        <article>
+          <figure>
+            <img src="images/mensenDieEenRareSportklasVolgen.jpeg" alt="Groep mensen doet fitnessoefeningen in een donkere sportschool" />
+          </figure>
+          <figure>
+            <img src="images/manDieEenRareDraaiDoet.webp" alt="Personal trainer geeft instructies in de sportschool" />
+          </figure>
+        </article>
+      </section>
+    </main>
+  </body>
 </html>
