--- a/index.html
+++ b/index.html
@@ -3,11 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Basic-Fit - Live Groepslessen en Video-Workouts</title>
+    <title>Groepslessen & Video-Workouts | Basic-Fit </title>
     <link rel="stylesheet" href="/style.css" />
-    <meta property="og:image" content="https://bolt.new/static/og_default.png">
-    <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:image" content="https://bolt.new/static/og_default.png">
 </head>
   <body>
     <header>
@@ -46,7 +43,7 @@
     <main>
       <section>
         <article>
-          <a href="#">‹ Home</a>
+          <a href="#"> Home</a>
           <h1>LIVE GROEPSLESSEN EN VIDEO-WORKOUTS</h1>
           <p>Train op jouw manier met live en virtuele lessen. Doe mee in de club of stream workouts via de app. Van dans tot high intensity, er is altijd iets dat bij je past. Altijd inbegrepen bij je lidmaatschap.</p>
           <button>WORD LID</button>
