--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         </ul>
         <ul>
           <li><a href="#"><img src="" alt="" /> My Basic-Fit</a></li>
-          <li><a href="#"><img src="" alt="" /> Klantenservice</a></li>
+          <li><a href="#"><img src="" alt="" /> Klantenservice</a></li> 
           <li>
             <select>
               <option>NL</option>
@@ -28,7 +28,7 @@
       </nav>
 
       <nav>
-        <a href="#"><image src="images/logo-bf-orange.svg"></image></a>
+        <a href="#"><img src="images/logo-bf-orange.svg"></img></a>
         <ul>
           <li><a href="#">Vind een club</a></li>
           <li><a href="#">Prijzen</a></li>
@@ -43,7 +43,7 @@
     <main>
       <section>
         <article>
-          <a href="#"> Home</a>
+          <a href="#">‹ Home</a>
           <h1>LIVE GROEPSLESSEN EN VIDEO-WORKOUTS</h1>
           <p>Train op jouw manier met live en virtuele lessen. Doe mee in de club of stream workouts via de app. Van dans tot high intensity, er is altijd iets dat bij je past. Altijd inbegrepen bij je lidmaatschap.</p>
           <button>WORD LID</button>
